补充entity，dao，service和controller层代码，并添加unit test cases

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,18 @@ info.app.name=Jib Spring Boot Example
 info.app.description=使用Jib打包的Spring Boot应用示例
 info.app.version=1.0.0
 
+# H2数据库配置
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA配置
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# H2控制台配置（开发环境）
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
