--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,9 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- Jib镜像配置，可通过命令行参数覆盖 -->
+        <jib.from.image>eclipse-temurin:17-jre-alpine</jib.from.image>
+        <jib.to.image>jib-example:latest</jib.to.image>
     </properties>
 
     <dependencies>
@@ -71,12 +74,12 @@
                 <version>3.4.6</version>
                 <configuration>
                     <from>
-                        <!-- 基础镜像 -->
-                        <image>eclipse-temurin:17-jre-alpine</image>
+                        <!-- 基础镜像，可通过 -Djib.from.image 参数覆盖 -->
+                        <image>${jib.from.image}</image>
                     </from>
                     <to>
-                        <!-- 目标镜像仓库和标签 -->
-                        <image>jib-example:latest</image>
+                        <!-- 目标镜像仓库和标签，可通过 -Djib.to.image 参数覆盖 -->
+                        <image>${jib.to.image}</image>
                     </to>
                     <container>
                         <!-- 容器配置 -->
